fix: spacing on mobile #4

--- a/static/style.css
+++ b/static/style.css
@@ -25,8 +25,6 @@ h1, h2, h3, h4, h5, h6, p, button, .link-tag {
 	display: flex;
     flex-direction: row;
     align-items: center;
-	font-size: larger;
-	margin-bottom: 0;
 }
 
 body {
